--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css?family=Quicksand:400,500,700&subset=latin-ext');
 
 html {
@@ -12,12 +11,18 @@ svg {
 }
 
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
 body {
   font-family: 'Quicksand', sans-serif;
   color: #324e63;
+  height: 100vh;
+  font-weight: 400;
+  background: rgb(25,25,25);
+  background: linear-gradient(45deg, rgba(25,25,25,1) 0%, rgba(77,76,76,1) 100%);
 }
 
 a, a:hover {
